--- a/occupancy-flow/slides/oflow-experiments.html
+++ b/occupancy-flow/slides/oflow-experiments.html
@@ -1,8 +1,21 @@
 <!-- .slide: class="layout-1x1" -->
 
+## Occupancy Flow
+
+<div class="column-1">
+    <div class="row-10 flex-row flex-center align-center" style="font-size: 1.5em">
+            <p>Experiments</p>
+    </div>
+</div>
+
+
+---
+
+<!-- .slide: class="layout-1x1" -->
+
 ## Occupancy Flow: Experiments
 
-Point Cloud Completion:
+<strong>Experiments</strong>: Point Cloud Completion
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
     <video class="only-slide" data-autoplay loop src="gfx/oflow/input.mp4" width=80%
@@ -23,7 +36,7 @@ Point Cloud Completion:
 
 ## Occupancy Flow: Experiments
 
-Point Cloud Completion:
+<strong>Experiments</strong>: Point Cloud Completion
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
     <video class="only-slide" data-autoplay loop src="gfx/oflow/input.mp4" width=80%
@@ -43,7 +56,7 @@ Point Cloud Completion:
 
 ## Occupancy Flow: Experiments
 
-Point Cloud Completion:
+<strong>Experiments</strong>: Point Cloud Completion
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
     <video class="only-slide" data-autoplay loop src="gfx/oflow/input.mp4" width=80% style="object-fit: cover; height: 600px;"></video>
@@ -60,7 +73,22 @@ Point Cloud Completion:
 
 ## Occupancy Flow: Experiments
 
-Generative Model:
+<strong>Experiments</strong>: Interpolation
+
+<div class="column-1">
+        <div class="figure">
+            <img src="gfx/oflow/experiments/interpolation.svg" width="80%">
+        </div>
+</div>
+
+---
+
+
+<!-- .slide: class="layout-1x1" -->
+
+## Occupancy Flow: Experiments
+
+<strong>Experiments</strong>: Generative Model
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
     <video class="only-slide" data-autoplay loop src="gfx/oflow/interp_shape.mp4" width=70% 
@@ -81,7 +109,7 @@ Generative Model:
 
 ## Occupancy Flow: Experiments
 
-Generative Model:
+<strong>Experiments</strong>: Generative Model
 
 <div class="column-1 figure"
     style="grid-template-columns: 30% 5% 30% 5% 30%; height: 800px;">
@@ -110,7 +138,7 @@ Generative Model:
 
 ## Occupancy Flow: Experiments
 
-Generative Model:
+<strong>Experiments</strong>: Generative Model
 
 <div class="column-1 figure" style="grid-template-columns: 30% 5% 30% 5% 30%; height: 800px;">
     <video class="only-slide" data-autoplay loop src="gfx/oflow/motion_01.mp4" width="100%"></video>
