--- a/occupancy-flow/slides/oflow-experiments.html
+++ b/occupancy-flow/slides/oflow-experiments.html
@@ -2,31 +2,16 @@
 
 ## Occupancy Flow
 
-<div class="column-1">
-    <div class="row-10 flex-row flex-center align-center" style="font-size: 1.5em">
-            <p>Experiments</p>
-    </div>
-</div>
-
-
----
-
-<!-- .slide: class="layout-1x1" -->
-
-## Occupancy Flow: Experiments
-
-<strong>Experiments</strong>: Point Cloud Completion
+Point Cloud Completion:
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/input.mp4" width=80%
+    <!-- Input -->
+    <video data-autoplay loop src="gfx/oflow/input.mp4" poster="gfx/oflow/input.png" width=80%
         style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" src="gfx/oflow/input.png" width=80%
-        style="object-fit: cover; height: 600px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/onet.mp4" width=80%
-        style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" src="gfx/oflow/onet.png" width=80%
-        style="object-fit: cover; height: 600px;">
     <p>Input</p>
+    <!-- Output -->
+    <video data-autoplay loop src="gfx/oflow/onet.mp4" poster="gfx/oflow/onet.png" width=80%
+        style="object-fit: cover; height: 600px;"></video>
     <p>ONet-4D</p>
 </div>
 
@@ -34,19 +19,18 @@
 
 <!-- .slide: class="layout-1x1" -->
 
-## Occupancy Flow: Experiments
+## Occupancy Flow
 
-<strong>Experiments</strong>: Point Cloud Completion
+Point Cloud Completion:
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/input.mp4" width=80%
+    <!-- Input -->
+    <video data-autoplay loop src="gfx/oflow/input.mp4" poster="gfx/oflow/input.png" width=80%
         style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" data-autoplay loop src="gfx/oflow/input.png" width=80%
-        style="object-fit: cover; height: 600px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/psgn.mp4" width=80% style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" data-autoplay loop src="gfx/oflow/psgn.png" width=80%
-        style="object-fit: cover; height: 600px;">
     <p>Input</p>
+    <!-- Output -->
+    <video data-autoplay loop src="gfx/oflow/psgn.mp4" poster="gfx/oflow/psgn.png" width=80%
+        style="object-fit: cover; height: 600px;"></video>
     <p>PSGN-4D</p>
 </div>
 
@@ -54,16 +38,18 @@
 
 <!-- .slide: class="layout-1x1" -->
 
-## Occupancy Flow: Experiments
+## Occupancy Flow
 
-<strong>Experiments</strong>: Point Cloud Completion
+Point Cloud Completion:
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/input.mp4" width=80% style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" src="gfx/oflow/input.png" width=80% style="object-fit: cover; height: 600px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/oflow.mp4" width=80% style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" src="gfx/oflow/oflow.png" width=80% style="object-fit: cover; height: 600px;">
+    <!-- Input -->
+    <video data-autoplay loop src="gfx/oflow/input.mp4" poster="gfx/oflow/input.png" width=80%
+        style="object-fit: cover; height: 600px;"></video>
     <p>Input</p>
+    <!-- Output -->
+    <video data-autoplay loop src="gfx/oflow/oflow.mp4" poster="gfx/oflow/oflow.png" width=80%
+        style="object-fit: cover; height: 600px;"></video>
     <p>OFlow</p>
 </div>
 
@@ -71,35 +57,38 @@
 
 <!-- .slide: class="layout-1x1" -->
 
-## Occupancy Flow: Experiments
+## Occupancy Flow
 
-<strong>Experiments</strong>: Interpolation
+Interpolations:
 
-<div class="column-1">
-        <div class="figure">
-            <img src="gfx/oflow/experiments/interpolation.svg" width="80%">
-        </div>
+<div class="column-1 figure" style="grid-template-columns: 45% 45%; height: 800px;">
+    <!-- Motion input -->
+    <video data-autoplay loop src="gfx/oflow/interp_in.mp4" poster="gfx/oflow/interp_in.png" width="100%"></video>
+    <p>Input</p>
+    <!-- Output -->
+    <video class="fragment" data-fragment-index=0 data-autoplay loop src="gfx/oflow/interp_out.mp4"
+        poster="gfx/oflow/interp_out.png" width=100%></video>
+    <p class="fragment" data-fragment-index=0>
+        Output
+    </p>
 </div>
 
 ---
 
-
 <!-- .slide: class="layout-1x1" -->
 
-## Occupancy Flow: Experiments
+## Occupancy Flow
 
-<strong>Experiments</strong>: Generative Model
+Generative Model:
 
 <div class="column-1 figure" style="grid-template-columns: 50% 50%; height: 800px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/interp_shape.mp4" width=70% 
+    <!-- Shape -->
+    <video data-autoplay loop src="gfx/oflow/interp_shape.mp4" poster="gfx/oflow/interp_shape.png" width=70%
         style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print" src="gfx/oflow/interp_shape.png" width=70% style="object-fit: cover; height: 600px;">
-    <video class="only-slide fragment" data-autoplay loop src="gfx/oflow/interp_motion.mp4" width=70%
-        data-fragment-index=1 
-        style="object-fit: cover; height: 600px;"></video>
-    <img class="only-print fragment" src="gfx/oflow/interp_motion.png" width=70% data-fragment-index=1
-        style="object-fit: cover; height: 600px;">
     <p>Shape Interpolation</p>
+    <!-- Motion -->
+    <video data-autoplay loop class="fragment" data-fragment-index=1 src="gfx/oflow/interp_motion.mp4"
+        poster="gfx/oflow/interp_motion.png" width=70% style="object-fit: cover; height: 600px;"></video>
     <p class="fragment" data-fragment-index=1>Motion Interpolation</p>
 </div>
 
@@ -109,26 +98,27 @@
 
 ## Occupancy Flow: Experiments
 
-<strong>Experiments</strong>: Generative Model
+Generative Model:
 
-<div class="column-1 figure"
-    style="grid-template-columns: 30% 5% 30% 5% 30%; height: 800px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/motion_00.mp4" width="100%"></video>
-    <img class="only-print" data-autoplay loop src="gfx/oflow/motion_00.png" width="100%">
+<div class="column-1 figure" style="grid-template-columns: 30% 5% 30% 5% 30%; height: 800px;">
+    <!-- Motion input -->
+    <video data-autoplay loop src="gfx/oflow/motion_00.mp4" poster="gfx/oflow/motion_00.png" width="100%"></video>
+    <p>Motion</p>
+    <!-- Plus sign  -->
     <div style="font-size: 2em;">
         $+$
     </div>
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/shape_00.mp4" width=100%></video>
-    <img class="only-print" data-autoplay loop src="gfx/oflow/shape_00.png" width=100%>
+    <p></p>
+    <!-- Shape input -->
+    <video data-autoplay loop src="gfx/oflow/shape_00.mp4" poster="gfx/oflow/shape_00.png" width=100%></video>
+    <p>Shape</p>
+    <!-- Equal sign -->
     <div style="font-size: 2em;">
         $=$
     </div>
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/output_00.mp4" width=100%></video>
-    <img class="only-print" src="gfx/oflow/output_00.png" width=100%>
-    <p>Motion</p>
     <p></p>
-    <p>Shape</p>
-    <p></p>
+    <!-- Output -->
+    <video data-autoplay loop src="gfx/oflow/output_00.mp4" poster="gfx/oflow/output_00.png" width=100%></video>
     <p>Output</p>
 </div>
 
@@ -136,26 +126,28 @@
 
 <!-- .slide: class="layout-1x1" -->
 
-## Occupancy Flow: Experiments
+## Occupancy Flow
 
-<strong>Experiments</strong>: Generative Model
+Generative Model:
 
 <div class="column-1 figure" style="grid-template-columns: 30% 5% 30% 5% 30%; height: 800px;">
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/motion_01.mp4" width="100%"></video>
-    <img class="only-print" src="gfx/oflow/motion_01.png" width="100%">
+    <!-- Motion input -->
+    <video data-autoplay loop src="gfx/oflow/motion_01.mp4" poster="gfx/oflow/motion_01.png" width="100%"></video>
+    <p>Motion</p>
+    <!-- Plus sign -->
     <div style="font-size: 2em;">
         $+$
     </div>
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/shape_01.mp4" width=100%></video>
-    <img class="only-print" src="gfx/oflow/shape_01.png" width=100%>
+    <p></p>
+    <!-- Shape input -->
+    <video data-autoplay loop src="gfx/oflow/shape_01.mp4" poster="gfx/oflow/shape_01.png" width=100%></video>
+    <p>Shape</p>
+    <!-- Equal sign -->
     <div style="font-size: 2em;">
         $=$
     </div>
-    <video class="only-slide" data-autoplay loop src="gfx/oflow/output_01.mp4" width=100%></video>
-    <img class="only-print" src="gfx/oflow/output_01.png" width=100%></video>
-    <p>Motion</p>
     <p></p>
-    <p>Shape</p>
-    <p></p>
+    <!-- Output -->
+    <video data-autoplay loop src="gfx/oflow/output_01.mp4" poster="gfx/oflow/output_01.png" width=100%></video>
     <p>Output</p>
 </div>
