--- a/occupancy-flow/index.html
+++ b/occupancy-flow/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Deep Learning in Function Space</title>
+		<title>Occupancy Flow</title>
 
 		<link rel="stylesheet" href="lib/reveal/css/reset.css">
 		<link rel="stylesheet" href="lib/reveal/css/reveal.css">
