--- a/texture-fields/slides/tex-intro.html
+++ b/texture-fields/slides/tex-intro.html
@@ -86,7 +86,7 @@
 
 ## Texture Fields
 
-<strong>Our approach</strong>: Predict continuous Texture Field
+<strong>Our approach</strong>: Learning a continuous field parameterized with a neural net
 
 <div class="column-1 flex-col">
     <img src="gfx/texnet/teaser.svg" width=1000px>
