--- a/texture-fields/slides/tex-intro.html
+++ b/texture-fields/slides/tex-intro.html
@@ -74,7 +74,7 @@
 
 <div class="column-2">
     <ul class="pro-contra" style="padding-left: 2em">
-        <li class="pro fragment">High frequency texture</li>
+        <li class="pro fragment">High-frequency texture</li>
         <li class="contra fragment">Requires Template</li>
         <li class="contra fragment">Discontinuities</li>
     </ul>
